dfir_rs/tests/compile-fail-stable/surface_conflicting_name.rs
../compile-fail/surface_conflicting_name.rs